# cargo

# [[file:~/Workspace/Programming/rust-libs/cg_descent.rs/cg_descent.note::*cargo][cargo:1]]
[package]
name = "cg_descent"
edition = "2018"
version = "0.0.1"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
quicli = "*"

[build-dependencies]
cc = "*"
bindgen = "0.26.3"
# cargo:1 ends here
